# rpp-hound

./: README.md  analysis.scala  cfg.pl  coverage.pl  graph_coverages.py  graph_rp_coverages.py  remove_duplicates.py  remove_duplicates.sh  rp_coverage.py  rpp-hound.py
coverage-instrumenter/: CMakeLists.txt  FunctionInserter.cpp  FunctionInserter.h  IfStmtInstrumenter.cpp  IfStmtInstrumenter.h  RarePathCoverageCommon.cpp  RarePathCoverageCommon.h  ReplacePlaceholders.cpp  ReplacePlaceholders.h  ScopeUpdater.cpp  ScopeUpdater.h  rpcov-instrument.cpp
